k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rentacar-service
spec:
  type: NodePort
  selector:
    app: rentacar
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
