k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rentacar-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: rentacar.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rentacar-service
            port:
              number: 8080
